--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Document</title>
+    <title>F O R K S T A R E</title>
 </head>
 <body>
     <nav>
@@ -25,7 +25,10 @@
         <li class="menu-item-right">
             <a href="#" class="menu-link">Log in</a>
         </li>
+		<li class="menu-item-right">
+            <img alt="logo" class="menu-link" id="logo" src="imgs/logo-text.png">
+        </li>
     </ul>
-    </nav>
+    </nav>	
 </body>
 </html>
