Fix bug and add favicon

--- a/public/index.html
+++ b/public/index.html
@@ -1,38 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel='shortcut icon' type='image/ico' href='./favicon.ico' />
     <title>F O R K S T A R E</title>
 </head>
+
 <body>
     <nav>
         <ul id="main-menu">
-        <li class="menu-item-left">
-           <a href="#" class="menu-link">Recent recipes</a>
-        </li>
-        <li class="menu-item-left">
-            <a href="#" class="menu-link">Popular recipes</a>
-        </li>
-        <li class="menu-item-left">
-            <a href="#" class="menu-link">All recipes</a>
-        </li>
-        <li class="menu-item-right">
-            <a href="#" class="menu-link">About</a>
-        </li>
-        <li class="menu-item-right">
-            <a href="#" class="menu-link">Log in</a>
-        </li>
-		<li class="menu-item-right">
-            <img alt="logo" class="menu-link" id="logo" src="imgs/logo-text.png">
-        </li>
-    </ul>
-<<<<<<< Updated upstream
-    </nav>	
-=======
+            <li class="menu-item-left">
+                <a href="#" class="menu-link">Recent recipes</a>
+            </li>
+            <li class="menu-item-left">
+                <a href="#" class="menu-link">Popular recipes</a>
+            </li>
+            <li class="menu-item-left">
+                <a href="#" class="menu-link">All recipes</a>
+            </li>
+            <li class="menu-item-right">
+                <a href="#" class="menu-link">About</a>
+            </li>
+            <li class="menu-item-right">
+                <a href="#" class="menu-link">Log in</a>
+            </li>
+        </ul>
+        <img alt="logo" class="menu-link" id="logo" src="imgs/logo-text.png">
 
->>>>>>> Stashed changes
+    </nav>
 </body>
+
 </html>
