--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
     <script src="./bower_components/jquery/dist/jquery.js"></script>
     <script src="./bower_components/handlebars/handlebars.js"></script>
     <script src="./bower_components/navigo/lib/navigo.js"></script>
+    <script src="./bower_components/crypto-js/index.js"></script>
      <script src="./scripts/requester.js">
     </script>
     <script src="./scripts/templater.js">
@@ -44,6 +45,8 @@
     <script src="./scripts/data.js">
     </script>
     <script src="./scripts/controllers/controllers.js">
+    </script>
+    <script src="./scripts/controllers/usersControllers.js">
     </script>
     <script src="./scripts/app.js"></script>
 </body>
