Add login logic

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
                 <a href="#" class="menu-link">About</a>
             </li>
             <li class="menu-item-right">
-                <a href="#" class="menu-link">Log in</a>
+                <a href="#/users/login" class="menu-link">Log in</a>
             </li>
         </ul>
         <img alt="logo" class="menu-link" id="logo" src="imgs/logo-text.png">
