--- a/public/index.html
+++ b/public/index.html
@@ -5,41 +5,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel='shortcut icon' type='image/ico' href='./favicon.ico' />
     <title>F O R K S T A R E</title>
 </head>
-
 <body>
-    <nav>
-        <ul id="main-menu">
-            <li class="menu-item-left">
-                <a href="#/recent" class="menu-link">Recent recipes</a>
-            </li>
-            <li class="menu-item-left">
-                <a href="#/mostpopular" class="menu-link">Popular recipes</a>
-            </li>
-            <li class="menu-item-left">
-                <a href="#/recipes" class="menu-link">All recipes</a>
-            </li>
-            <li class="menu-item-right">
-                <a href="#" class="menu-link">About</a>
-            </li>
-            <li class="menu-item-right">
-                <a href="#/users/login" class="menu-link" id="login">Log in</a>
-            </li>
-            <li id="logout">
-                <a href="#/home" class="menu-link">Log out</a>
-            </li>
-        </ul>
-        <img alt="logo" class="menu-link" id="logo" src="imgs/logo-text.png">
-    </nav>
+	<nav class="navbar navbar-inverse">
+		<div class="container-fluid">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#">
+				<img alt="Forkstare logo" src="./imgs/mobile-logo.png">
+			</a>
+			</div>
+		
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav">
+				<li class="active"><a href="#/recent" class="menu-link">Recent recipes <span class="sr-only">(current)</span></a></li>
+				<li><a href="#/mostpopular" class="menu-link">Popular recipes</a></li>
+				<li><a href="#/recipes" class="menu-link">All recipes</a></li>
+				<li><a href="#" class="menu-link">About</a></li>		
+			</ul>
+			<form class="navbar-form navbar-right">
+				<div class="form-group">
+				<input type="text" class="form-control" placeholder="Search">
+				</div>
+				<button type="submit" class="btn btn-default">Find recipe</button>
+			</form>
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="#/users/login" class="menu-link" id="login">Log in</a></li>
+				<li><a href="#/home" class="menu-link" id="logout">Log out</a></li>
+			</ul>
+			</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
+	</nav>
 
     <div id="main" class="container">
         <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
         </fb:login-button>
     </div>
 
+	<img alt="logo" class="menu-link" id="logo" src="imgs/logo-text.png">
+	
     <script src="./scripts/fb-login-loader.js">     
     </script>
     <script src="./bower_components/jquery/dist/jquery.js">
