--- a/public/index.html
+++ b/public/index.html
@@ -22,21 +22,21 @@
 				<span class="icon-bar"></span>
 			</button>
 			<a class="navbar-brand" href="#">
-				<img alt="Forkstare logo" src="./imgs/mobile-logo.png">
+				<img alt="Forkstare logo" src="./imgs/mobile-logo-mini.png">
 			</a>
 			</div>
 		
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="nav navbar-nav">
-				<li class="active"><a href="#/recent" class="menu-link">Recent recipes <span class="sr-only">(current)</span></a></li>
-				<li><a href="#/mostpopular" class="menu-link">Popular recipes</a></li>
-				<li><a href="#/recipes" class="menu-link">All recipes</a></li>
-				<li><a href="#" class="menu-link">About</a></li>		
+			<ul class="nav navbar-nav" id="nav-buttons">
+				<li id="nav-recent"><a href="#/recent" class="menu-link">Recent recipes <span class="sr-only">(current)</span></a></li>
+				<li id="nav-popular"><a href="#/mostpopular" class="menu-link">Popular recipes</a></li>
+				<li id="nav-all"><a href="#/recipes" class="menu-link">All recipes</a></li>
+				<li id="nav-about"><a href="#" class="menu-link">About</a></li>		
 			</ul>
 			<form class="navbar-form navbar-right">
 				<div class="form-group">
-				<input type="text" class="form-control" placeholder="Search">
+				<input type="text" class="form-control" placeholder="Search Forkstare...">
 				</div>
 				<button type="submit" class="btn btn-default">Find recipe</button>
 			</form>
