--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 				<li id="nav-recent"><a href="#/recent" class="menu-link">Recent recipes <span class="sr-only">(current)</span></a></li>
 				<li id="nav-popular"><a href="#/mostpopular" class="menu-link">Popular recipes</a></li>
 				<li id="nav-all"><a href="#/recipes" class="menu-link">All recipes</a></li>
-				<li id="nav-about"><a href="#" class="menu-link">About</a></li>		
+				<li id="nav-about"><a href="#/about" class="menu-link">About</a></li>		
 			</ul>
 			<form class="navbar-form navbar-right">
 				<div class="form-group">
