--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 			</form>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#/users/login" class="menu-link" id="login">Log in</a></li>
-				<li><a href="#/home" class="menu-link" id="logout">Log out</a></li>
+				<li><a href="#/users/logout" class="menu-link" id="logout">Log out</a></li>
 			</ul>
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
