added more bootstrap
Signed-off-by: stoychevvasko <stoychev.vassil@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel='shortcut icon' type='image/ico' href='./favicon.ico' />
     <title>F O R K S T A R E</title>
 </head>
-<body>
+<body>	
 	<nav class="navbar navbar-inverse">
 		<div class="container-fluid">
 			<!-- Brand and toggle get grouped for better mobile display -->
@@ -36,24 +36,24 @@
 			</ul>
 			<form class="navbar-form navbar-right">
 				<div class="form-group">
-				<input type="text" class="form-control" placeholder="Search Forkstare...">
+					<input type="text" class="form-control" placeholder="Search Forkstare...">
 				</div>
 				<button type="submit" class="btn btn-default">Find recipe</button>
 			</form>
 			<ul class="nav navbar-nav navbar-right">
+				<li class="btn navbar-btn">
+					<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+					</fb:login-button>
+				</li>
 				<li><a href="#/users/login" class="menu-link" id="login">Log in</a></li>
 				<li><a href="#/users/logout" class="menu-link" id="logout">Log out</a></li>
 			</ul>
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 	</nav>
-
+	
     <div id="main" class="container">
-        <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-        </fb:login-button>
     </div>
-
-	<img alt="logo" class="menu-link" id="logo" src="imgs/logo-text.png">
 	
     <script src="./scripts/fb-login-loader.js">     
     </script>
