--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav" id="nav-buttons">
 				<li id="nav-recent"><a href="#/recent" class="menu-link">Recent recipes <span class="sr-only">(current)</span></a></li>
-				<li id="nav-popular"><a href="#/mostpopular" class="menu-link">Popular recipes</a></li>
+				<li id="nav-popular"><a href="#/popular" class="menu-link">Popular recipes</a></li>
 				<li id="nav-all"><a href="#/recipes" class="menu-link">All recipes</a></li>
 				<li id="nav-about"><a href="#/about" class="menu-link">About</a></li>		
 			</ul>
@@ -38,7 +38,7 @@
 				<div class="form-group">
 					<input type="text" class="form-control" placeholder="Search Forkstare...">
 				</div>
-				<button type="submit" class="btn btn-default">Find recipe</button>
+				<button type="submit" class="btn btn-default" id="btn-search">Find recipe</button>
 			</form>
 			<ul class="nav navbar-nav navbar-right">
 				<li class="btn navbar-btn">
