--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 			</ul>
 			<form class="navbar-form navbar-right">
 				<div class="form-group">
-					<input type="text" class="form-control" placeholder="Search Forkstare...">
+					<input type="text" class="form-control" placeholder="Search Forkstare..." id="tb-search">
 				</div>
 				<button type="submit" class="btn btn-default" id="btn-search">Find recipe</button>
 			</form>
