--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="../libs/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="./css/main.css">
+	<link rel="stylesheet" href="./css/login.css">
     <link rel='shortcut icon' type='image/ico' href='./favicon.ico' />
     <title>F O R K S T A R E</title>
 </head>
