--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/main.css">
 	<link rel="stylesheet" href="./css/login.css">
     <link rel='shortcut icon' type='image/ico' href='./favicon.ico' />
+	<link rel="stylesheet" href="./css/listRecipes.css"/>
     <title>F O R K S T A R E</title>
 </head>
 <body>	
@@ -62,6 +63,7 @@
 	</script>
 	<script src="/libs/handlebars/dist/handlebars.js">
 	</script>
+	<script src="/libs/bootstrap/dist/js/bootstrap.js"></script>
 	<script src="/libs/navigo/lib/navigo.js">
 	</script>
 	<script src="/libs/crypto-js/crypto-js.js">
