responsive bug fixes (bootstrap columns) et al.
Signed-off-by: stoychevvasko <stoychev.vassil@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -54,8 +54,12 @@
 		</div><!-- /.container-fluid -->
 	</nav>
 	
-    <div id="main" class="container">
-    </div>
+	<div class="row">&nbsp;</div>	
+	<div class="row">
+		<div class="col-md-4"></div>
+		<div id="main" class="container col-md-7"></div>
+		<div class="col-md-1"></div>
+	</div>
 	
     <script src="./scripts/fb-login-loader.js">     
     </script>
