Separate css files and fix comments

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,12 @@
 	<link rel="stylesheet" href="../libs/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="./css/main.css">
 	<link rel="stylesheet" href="./css/login.css">
+	<link rel="stylesheet" href="./css/register.css">
+	<link rel="stylesheet" href="./css/comments.css">
+	<link rel="stylesheet" href="./css/createRecipes.css">
+	<link rel="stylesheet" href="./css/listRecipes.css"/>	
     <link rel='shortcut icon' type='image/ico' href='./favicon.ico' />
-	<link rel="stylesheet" href="./css/listRecipes.css"/>
-    <title>F O R K S T A R E</title>
+    <title>FORKSTARE</title>
 </head>
 <body>	
 	<nav class="navbar navbar-inverse">
