--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="../libs/bootstrap/dist/css/bootstrap.css">
+	<link rel="stylesheet" href="/libs/toastr/build/toastr.css">
     <link rel="stylesheet" href="./css/main.css">
 	<link rel="stylesheet" href="./css/login.css">
 	<link rel="stylesheet" href="./css/register.css">
@@ -70,12 +71,16 @@
 	</script>
 	<script src="/libs/handlebars/dist/handlebars.js">
 	</script>
-	<script src="/libs/bootstrap/dist/js/bootstrap.js"></script>
+	<script src="/libs/bootstrap/dist/js/bootstrap.js">
+	</script>
 	<script src="/libs/navigo/lib/navigo.js">
+	</script>
+	<script src="/libs/toastr/toastr.js">
 	</script>
 	<script src="/libs/crypto-js/crypto-js.js">
 	</script>
 	
+	<script src="./scripts/toastr-fix.js"></script>
     <script src="./scripts/requester.js">
     </script>
     <script src="./scripts/templater.js">
