Fix create recipe logic

--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel='shortcut icon' type='image/ico' href='./favicon.ico'>
 	<link rel="stylesheet" href="../libs/bootstrap/dist/css/bootstrap.css">
-	<link rel="stylesheet" href="/libs/toastr/build/toastr.css">
+	<link rel="stylesheet" href="/libs/toastr/build/toastr.css"/>
     <link rel="stylesheet" href="./css/main.css">
 	<link rel="stylesheet" href="./css/login.css">
 	<link rel="stylesheet" href="./css/register.css">
 	<link rel="stylesheet" href="./css/comments.css">
 	<link rel="stylesheet" href="./css/createRecipes.css">
-	<link rel="stylesheet" href="./css/listRecipes.css"/>	
-    <link rel='shortcut icon' type='image/ico' href='./favicon.ico' />
+	<link rel="stylesheet" href="./css/listRecipes.css">	  
     <title>FORKSTARE</title>
 </head>
 <body>	
